--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,11 +1,11 @@
 // COLORS
 $purple: #2e2b36;
-$purple_grey: #615f69;
+$purple_gray: #615f69;
 $purple_light: #ececec;
-$grey_1: #5e5e5e;
-$grey_2: #a9a9a9;
-$grey_3: #979fa3;
-$grey_light: #fbfafa;
+$gray_1: #5e5e5e;
+$gray_2: #a9a9a9;
+$gray_3: #979fa3;
+$gray_light: #fbfafa;
 $purple_light_1: #615f69;
 
 @mixin day_box($day_bg, $day_font) {
