--- a/src/assets/styles/nav.scss
+++ b/src/assets/styles/nav.scss
@@ -1,3 +1,10 @@
+@media (max-width: 800px) {
+    .nav__menu {
+        display: none;
+    }
+  }
+  
+
 .nav {
     &__menu {
         font-family: 'Montserrat', sans-serif;
@@ -6,8 +13,8 @@
         transition: 0.8s;
         background-color: rgba(255, 255, 255, 0.35);
         z-index: 2;
-        height: 100px;
         width: 100%;
+        height: 100px;
         ul {
             list-style-type: none;
             display: flex;
